[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=1]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/pages/mods/mod_info_container.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/actual/base/font_smallest_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/actual/base/font_menus.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_small_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/themes/panel/panel_style.tres" type="StyleBox" id=6]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=7]

[node name="ModInfoContainer" type="PanelContainer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.823529 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1910.0
margin_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1905.0
margin_bottom = 1065.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1885.0
margin_bottom = 1045.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 45.0

[node name="ModName" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 933.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "MOD_NAME"

[node name="ModAuthor" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 937.0
margin_right = 1870.0
margin_bottom = 45.0
size_flags_horizontal = 11
size_flags_vertical = 5
custom_fonts/font = ExtResource( 5 )
text = "MOD_AUTHOR"
align = 2
valign = 1
autowrap = true

[node name="ModWebsite" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 1870.0
margin_bottom = 75.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "MOD_WEBSITE"
text = "MOD_WEBSITE"
fit_content_height = true

[node name="ModVersion" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 79.0
margin_right = 1870.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
text = "MOD_VERSION"
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 1870.0
margin_bottom = 940.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ModDescription" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1870.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "MOD_DESCRIPTION"
text = "MOD_DESCRIPTION"
fit_content_height = true

[node name="DependecyContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 955.0
margin_right = 1870.0
margin_bottom = 1030.0
size_flags_horizontal = 7
size_flags_vertical = 5

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DependecyContainer"]
margin_right = 1870.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
text = "MOD_DEPENDENCIES"

[node name="ModDependencies" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DependecyContainer"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 1870.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "MOD_DEPENDENCY"
text = "MOD_DEPENDENCY"
fit_content_height = true

[node name="Button" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 1033.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_fonts/font = ExtResource( 1 )
text = "MOD_CONFIG"

[connection signal="meta_clicked" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ModWebsite" to="." method="_on_ModWebsite_meta_clicked"]
